# orculum

./: .gitignore  CLAUDE.md  README.md  logbook.json  pyproject.toml
research/: logbook.json  modulos.md  stack.md
src/: main.py
src/input/: capture.py  perception.py
